--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </div>
 <section class="section section1">
     <h3>Lorem ipsum dolor sit amet, consectetur.</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium beatae consectetur iusto labore, minus neque nihil odio sapiente. Aliquam eos laudantium natus ullam. A accusamus amet at commodi deserunt est, laudantium odit perferendis praesentium, quasi quis quod reprehenderit rerum veritatis?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda debitis eligendi labore laborum recusandae? Aliquid amet ea fuga minima veritatis! Aperiam dolorem fuga omnis.</p>
 </section>
 <div class="back_img2">
     <a style="background-color:black;color:white;text-decoration:none;padding:4px 6px;font-family:-apple-system, BlinkMacSystemFont, &quot;San Francisco&quot;, &quot;Helvetica Neue&quot;, Helvetica, Ubuntu, Roboto, Noto, &quot;Segoe UI&quot;, Arial, sans-serif;font-size:12px;font-weight:bold;line-height:1.2;display:inline-block;border-radius:3px;" href="https://unsplash.com/@cant89?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank" rel="noopener noreferrer" title="Download free do whatever you want high-resolution photos from Davide Cantelli"><span style="display:inline-block;padding:2px 3px;"><svg xmlns="http://www.w3.org/2000/svg" style="height:12px;width:auto;position:relative;vertical-align:middle;top:-1px;fill:white;" viewBox="0 0 32 32"><title>unsplash-logo</title><path d="M20.8 18.1c0 2.7-2.2 4.8-4.8 4.8s-4.8-2.1-4.8-4.8c0-2.7 2.2-4.8 4.8-4.8 2.7.1 4.8 2.2 4.8 4.8zm11.2-7.4v14.9c0 2.3-1.9 4.3-4.3 4.3h-23.4c-2.4 0-4.3-1.9-4.3-4.3v-15c0-2.3 1.9-4.3 4.3-4.3h3.7l.8-2.3c.4-1.1 1.7-2 2.9-2h8.6c1.2 0 2.5.9 2.9 2l.8 2.4h3.7c2.4 0 4.3 1.9 4.3 4.3zm-8.6 7.5c0-4.1-3.3-7.5-7.5-7.5-4.1 0-7.5 3.4-7.5 7.5s3.3 7.5 7.5 7.5c4.2-.1 7.5-3.4 7.5-7.5z"></path></svg></span><span style="display:inline-block;padding:2px 3px;">Davide Cantelli</span></a>
@@ -26,8 +26,8 @@
     </div>
 </div>
 <section class="section section2">
-    <h3>Lorem ipsum dolor sit amet, consectetur.</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium beatae consectetur iusto labore, minus neque nihil odio sapiente. Aliquam eos laudantium natus ullam. A accusamus amet at commodi deserunt est, laudantium odit perferendis praesentium, quasi quis quod reprehenderit rerum veritatis?</p>
+    <h3>Lorem ipsum dolor sit amet, consectetur adipisicing.</loren7></h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate deserunt necessitatibus odio, pariatur ratione sequi! Ad at autem doloribus harum itaque, laudantium, libero modi non odio quibusdam quod sunt unde voluptatum! Ipsam?</p>
 </section>
 <div class="back_img3">
     <a style="background-color:black;color:white;text-decoration:none;padding:4px 6px;font-family:-apple-system, BlinkMacSystemFont, &quot;San Francisco&quot;, &quot;Helvetica Neue&quot;, Helvetica, Ubuntu, Roboto, Noto, &quot;Segoe UI&quot;, Arial, sans-serif;font-size:12px;font-weight:bold;line-height:1.2;display:inline-block;border-radius:3px;" href="https://unsplash.com/@breather?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank" rel="noopener noreferrer" title="Download free do whatever you want high-resolution photos from Breather"><span style="display:inline-block;padding:2px 3px;"><svg xmlns="http://www.w3.org/2000/svg" style="height:12px;width:auto;position:relative;vertical-align:middle;top:-1px;fill:white;" viewBox="0 0 32 32"><title>unsplash-logo</title><path d="M20.8 18.1c0 2.7-2.2 4.8-4.8 4.8s-4.8-2.1-4.8-4.8c0-2.7 2.2-4.8 4.8-4.8 2.7.1 4.8 2.2 4.8 4.8zm11.2-7.4v14.9c0 2.3-1.9 4.3-4.3 4.3h-23.4c-2.4 0-4.3-1.9-4.3-4.3v-15c0-2.3 1.9-4.3 4.3-4.3h3.7l.8-2.3c.4-1.1 1.7-2 2.9-2h8.6c1.2 0 2.5.9 2.9 2l.8 2.4h3.7c2.4 0 4.3 1.9 4.3 4.3zm-8.6 7.5c0-4.1-3.3-7.5-7.5-7.5-4.1 0-7.5 3.4-7.5 7.5s3.3 7.5 7.5 7.5c4.2-.1 7.5-3.4 7.5-7.5z"></path></svg></span><span style="display:inline-block;padding:2px 3px;">Breather</span></a>
@@ -36,21 +36,20 @@
     </div>
 </div>
 <section class="section section3">
-    <h3>Lorem ipsum dolor sit amet, consectetur.</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium beatae consectetur iusto labore, minus neque nihil odio sapiente. Aliquam eos laudantium natus ullam. A accusamus amet at commodi deserunt est, laudantium odit perferendis praesentium, quasi quis quod reprehenderit rerum veritatis?</p>
+    <h3>Lorem ipsum dolor.</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias beatae cupiditate dolorem ducimus minima non repellendus similique! Ad adipisci amet aspernatur consectetur cum, eius fugiat illum in iste mollitia neque nisi numquam quod ratione, voluptatum? Delectus exercitationem, repellat?</p>
 </section>
 <div class="back_img4">
     <a style="background-color:black;color:white;text-decoration:none;padding:4px 6px;font-family:-apple-system, BlinkMacSystemFont, &quot;San Francisco&quot;, &quot;Helvetica Neue&quot;, Helvetica, Ubuntu, Roboto, Noto, &quot;Segoe UI&quot;, Arial, sans-serif;font-size:12px;font-weight:bold;line-height:1.2;display:inline-block;border-radius:3px;" href="https://unsplash.com/@chastityco?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank" rel="noopener noreferrer" title="Download free do whatever you want high-resolution photos from Chastity Cortijo"><span style="display:inline-block;padding:2px 3px;"><svg xmlns="http://www.w3.org/2000/svg" style="height:12px;width:auto;position:relative;vertical-align:middle;top:-1px;fill:white;" viewBox="0 0 32 32"><title>unsplash-logo</title><path d="M20.8 18.1c0 2.7-2.2 4.8-4.8 4.8s-4.8-2.1-4.8-4.8c0-2.7 2.2-4.8 4.8-4.8 2.7.1 4.8 2.2 4.8 4.8zm11.2-7.4v14.9c0 2.3-1.9 4.3-4.3 4.3h-23.4c-2.4 0-4.3-1.9-4.3-4.3v-15c0-2.3 1.9-4.3 4.3-4.3h3.7l.8-2.3c.4-1.1 1.7-2 2.9-2h8.6c1.2 0 2.5.9 2.9 2l.8 2.4h3.7c2.4 0 4.3 1.9 4.3 4.3zm-8.6 7.5c0-4.1-3.3-7.5-7.5-7.5-4.1 0-7.5 3.4-7.5 7.5s3.3 7.5 7.5 7.5c4.2-.1 7.5-3.4 7.5-7.5z"></path></svg></span><span style="display:inline-block;padding:2px 3px;">Chastity Cortijo</span></a>
     <div class="text">
-        <span class="border">tytul</span>
+        <span class="border">comfortable</span>
     </div>
 </div>
 <section class="section">
-    <h2>Lorem ipsum dolor sit amet, consectetur.</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium beatae consectetur iusto labore, minus neque nihil odio sapiente. Aliquam eos laudantium natus ullam. A accusamus amet at commodi deserunt est, laudantium odit perferendis praesentium, quasi quis quod reprehenderit rerum veritatis?</p>
+    <h2>Lorem ipsum dolor sit.</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut dignissimos earum facere ipsum nostrum optio veniam.</p>
 </section>
 <div>
-    <h3>napisz do nas</h3>
     <form action="#">
         <input type="text" name="imie i nazwisko" placeholder="IMIĘ I NAZWISKO" required>
         <input type="email" name="email" placeholder="E-MAIL" required>
@@ -61,7 +60,9 @@
 </div>
 <div class="back_img1">
     <div class="text">
-        <span class="border"></span>
+        <span class="border">Central C<br>
+Maputo<br> Mozambik<br>
+-25.975831<br> 32.583389</span>
     </div>
 </div>
 </body>
